2009-09-09  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp: When we are setting attributes we want to set
	everything with a backing dependency property before we set things
	that require managed. We also delay the setting of attributes with
	an explicit managed namespace reference.  NOTE: We dont delay
	setting attributes that have a DP but are forced into managed
	because of their type.
	- We can share SetUnknownAttribute functions because the default
	xmlns is inited to NULL.

	r: rolf

2009-09-09  Stephane Delcroix  <sdelcroix@novell.com>

	* multiscaleimage.cpp: Clear () the SubImagesCollection on 
	source changed. Speed things up when reusing the same MSI
	over and over with different sources. drt #2004 is now passing
	every times.

	r: rolf

2009-09-08  Sebastien Pouliot  <sebastien@ximian.com>

	* downloader.h, layout.h, list.h: Add missing virtual destructors

	r: toshok

2009-09-08  Chris Toshok  <toshok@ximian.com>

	* provider.cpp (StylePropertyValueProvider::SealStyle): pass true
	for ProviderValueChanged's @set_parent.
	(InheritedPropertyValueProvider::PropagateInheritedProperty): pass
	true in the visual walking case, and false in the
	textblock->inline case.
	(PROP_ADD): pass true.
	(AutoCreatePropertyValueProvider::GetPropertyValue): pass true.
	(InheritedPropertyValueProvider::PropagateInheritedProperty):
	do a deep traversal of the tree, looking for children who have a
	mapped property from the changed one (MapPropertyToDescendant
	returns NULL if there's no mapping).  Once we find a suitable
	descendant, call ProviderValueChanged on it with "true" for
	notify_listeners.  This will take care of notifying further down
	the tree if need be, and we can skip that branch.  For textblocks
	we also have to iterate over the inlines to propagate the property
	change notification.
	(InheritedPropertyValueProvider::PropagateInheritedPropertiesOnAddingToTree):
	traverse the entire subtree looking for classes which can inherit